AgileSites 2.0-M1: the installer is does download and install sites